<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/Black"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/input_textview"
            android:layout_width="match_parent"
            android:layout_height="339dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="12dp"
            android:background="@color/Black"
            android:gravity="end|bottom"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="80sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/grey2"
                android:text="@string/dev"
                android:textColor="@color/Black"
                android:textSize="28sp"
                app:cornerRadius="36dp"
                android:onClick="onClear"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plusminus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/grey2"
                android:text="@string/BL"
                android:textColor="@color/Black"
                android:textSize="20sp"
                app:cornerRadius="36dp"
                android:onClick="onPlusMinus"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/grey2"
                android:text="@string/BR"
                android:textColor="@color/Black"
                android:textSize="25sp"
                app:cornerRadius="36dp"
                android:onClick="onPercent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/orange"
                app:cornerRadius="36dp"
                android:onClick="onOperator"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_power"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:backgroundTint="@color/orange"
                app:cornerRadius="36dp"
                android:onClick="onOperator"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/div"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/orange"
                app:cornerRadius="36dp"
                android:onClick="onOperator"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtract"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/min"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/orange"
                app:cornerRadius="36dp"
                android:onClick="onOperator"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigit"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/dark_Grey"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDecimalPoint"
                />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equals"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/equl"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:backgroundTint="@color/orange"
                app:cornerRadius="36dp"
                android:onClick="onEqual"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>